--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,19 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          {{#each sections}}
+            <li><a href="/scraped/{{name}}">{{name}}</a></li>
+          {{/each}}
+        </ul>
+      </div>
+    </nav>
     {{{body}}}
   </body>
 </html>
