--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,8 +4,13 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script
+  src="http://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   </head>
   <body>
+    <header><h1>New York Times {Scraped}</h1></header>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
@@ -17,4 +22,6 @@
     </nav>
     {{{body}}}
   </body>
+  <script src="/javascripts/comments.js"></script>
+  <script src="/javascripts/scrape.js"></script>
 </html>
