--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/moment@2.20.1/moment.min.js"></script>
   </head>
   <body>
-    <header><h1>New York Times <a href="/">{Scraped}<a></h1></header>
+    <header><h1>New York Times <a href="/">{Scraped}</a></h1></header>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
@@ -23,6 +23,7 @@
     </nav>
     {{{body}}}
   </body>
+  <script src="/javascripts/textflash.js"></script>
   <script src="/javascripts/comments.js"></script>
   <script src="/javascripts/scrape.js"></script>
 </html>
